<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_gray"
    android:orientation="vertical"
    tools:context="com.captechventures.examples.espresso_recording.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/ic_logo_captech_white"
        app:layout_constraintBottom_toTopOf="@+id/title_text"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableTextView
        android:id="@+id/title_text"
        style="@style/Text.Header.Header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Brand Visual Standards"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/logo"
        app:layout_constraintRight_toRightOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_colors"
        style="@style/Button.Primary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_marginTop="48dp"
        android:text="Colors"
        app:layout_constraintLeft_toLeftOf="@+id/logo"
        app:layout_constraintRight_toLeftOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/title_text"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_core_values"
        style="@style/Button.Primary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_marginTop="48dp"
        android:text="Core Values"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        app:layout_constraintRight_toRightOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/title_text"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_components"
        style="@style/Button.Primary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_marginTop="24dp"
        android:text="Components"
        app:layout_constraintLeft_toLeftOf="@+id/bt_colors"
        app:layout_constraintTop_toBottomOf="@+id/bt_colors"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_assets"
        style="@style/Button.Primary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_marginTop="24dp"
        android:text="Assets"
        app:layout_constraintRight_toRightOf="@+id/bt_core_values"
        app:layout_constraintTop_toBottomOf="@+id/bt_core_values"
        tools:layout_constraintTop_creator="1"/>
</android.support.constraint.ConstraintLayout>
