...
    <string name="colors_blue">Blue Secondary Color</string>
    <string name="colors_orange">Orange Secondary Color</string>
    <string name="colors_red">Red Secondary Color</string>
    <string name="colors_purple">Purple Secondary Color</string>
    <string name="colors_teal">Teal Secondary Color</string>
    <string name="colors_green">Green Secondary Color</string>
    <string name="snackbar_message_prompt_color">Please select a color</string>
    <string name="snackbar_action_copy">Copy Hex Value</string>
    <string name="toast_copied_success">Copied Hex Value to clipboard</string>
    <string name="snackbar_message_color_selected">Selected %1$s with Hex of %2$s</string>
    <string name="title_activity_core_values">Core Values</string>
    <string name="core_value_trusted_advisor">Trusted Advisor</string>
    <string name="core_value_intellectual_curiosity">Intellectual Curiosity</string>
    <string name="core_value_flexibility">Flexibility</string>
...
